...
                                self.buttonColorTop = isLoginSuccessful ? buttonColorTopSucess : buttonColorLogin
                            }
                            if buttonColorBottom == buttonColorBottomActive {
                                self.buttonColorBottom = isLoginSuccessful ? buttonColorTopSucess : buttonColorLogin
                            }
                        }) {
                            Text("Login")
                                .fontWeight(.bold)
                                .foregroundColor(.white)
                                .frame(width: 275, height: 20, alignment: .center)
                        }
                        .padding()
                        .background(Color.black)
...
                        
                        Button(action: {
                            withAnimation {
                                showNextView = .selectRegistration
                            }
                        }) {
                            Text("Sign up here!")
                                .foregroundColor(.blue)
                        }
                        Spacer()
                    }
                    .padding(.top, 10)
                }
...
