...
                VStack {
                    Button(action: {
                        withAnimation {
                            showNextView = .mainTeacher
                        }
                    }) {
                        Text("MAIN")
                            .fontWeight(btnStyle.getFont())
                            .foregroundColor(btnStyle.getPathFontColor())
                            .frame(width: btnStyle.getWidth(),
                                   height: btnStyle.getHeight(),
                                   alignment: btnStyle.getAlignment())
                    }
...
                            }
                        }
                    }
                    
                    Spacer().frame(height: 25)
                    
                    //                Text("Connect Code")
                    //                    .font(.title)
                    //                    .padding(1)
                    //                TextField("Press the button to generate a code", text: $generatedCode)
                    //                    .background(Color.white.opacity(0.25))
                    //                    .foregroundColor(Color("BlackWhite"))
                    //                    .multilineTextAlignment(.center)
...
                }
                .tag(0) // Add a unique tag to track this tab
                
                TeacherAllRequestsView()
                    .tabItem {
                        Image(systemName: "hand.raised")
                        Text("Requests")
                    }
                    .tag(1) // Unique tag for this tab
                TeacherClassListView()
                            .tabItem {
                                Image(systemName: "list.bullet")
                                Text("My Classes")
...
                            }
                            .tag(9) // Unique tag for this tab
                        
                        TeacherSettingsView(showNextView: $showNextView)
                            .tabItem {
                                Image(systemName: "gear")
                                Text("Settings")
                            }
                            .tag(10) // Unique tag for this tab
            }
        }
    }
    // Load the active schedule's periods
...
